--- a/tools/news-aggregator/package.json
+++ b/tools/news-aggregator/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^21.0.0"
   },
   "keywords": [
     "news",
@@ -21,6 +22,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
