feat: add elegant interactive launch system with npm scripts
- Create interactive menu launcher (launch.js) with numbered options
- Add npm scripts: start, menu, news, skills:list, skills:add, skills:sync
- Update README with new elegant launch options
- Replace ./run.sh commands with npm run equivalents
- Improve UX with emojis, colors, and better error handling

--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "@commitlint/config-conventional": "^20.4.0"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "start": "node launch.js",
+    "menu": "node launch.js",
+    "news": "./run.sh news-aggregator",
+    "skills:list": "./run.sh skills list",
+    "skills:add": "./run.sh skills add",
+    "skills:sync": "./run.sh skills sync"
   }
 }
