feat: add Ralphy automation workflow for standardized development
- Add .ralphy/config.yaml with project-specific rules and commands
- Create PRD-TEMPLATE.md for structured task planning
- Add EXAMPLE-PRD.md demonstrating task structure
- Create RALPHY-GUIDE.md with comprehensive usage instructions
- Add ralphy-run.sh wrapper script for common workflows
- Update README.md with Ralphy documentation
- Update .gitignore to exclude Ralphy temporary files

This establishes a standardized AI-driven development workflow for My-Agent-Configuration, eliminating the need for manual prompt writing and skill/tool loading for each task.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,11 @@ tools/**/.next/
 # Node.js build artifacts
 *.tsbuildinfo
 next-env.d.ts
+
+# Ralphy temporary directories and files
+.ralphy-worktrees/
+.ralphy-sandboxes/
+.ralphy/progress.txt
+.ralphy/.progress-*
+.ralphy/.cache-*
+.ralphy/.tmp-*
