fix: correct notifications field in ralphy config
- Change notifications section from commented-out lines to empty object {}
- Fix ZodError: Expected object, received null
- Now ralphy --config works correctly

--- a/.ralphy/config.yaml
+++ b/.ralphy/config.yaml
@@ -102,11 +102,7 @@ capabilities:
   parallel: true   # Allow parallel execution for independent tasks
   sandbox: true    # Use sandbox mode for faster setup
 
-notifications:
-  # Uncomment and configure for notifications
-  # discord_webhook: "https://discord.com/api/webhooks/..."
-  # slack_webhook: "https://hooks.slack.com/services/..."
-  # custom_webhook: "https://your-api.com/webhook"
+notifications: {}
 
 workflow:
   standard_tasks:
